Add HTML contents

--- a/index.html
+++ b/index.html
@@ -23,23 +23,34 @@
 </head>
 
 <body>
+  <main>
+    <section class="card_container">
+      <div class="card-contents">
+        <div class="card-img_container">
+          <img class="card-img" src="assets/images/avatar-jessica.jpeg" alt="An avatar of Jessica Randall">
+        </div>
+        <div class="card-title-group">
+          <h2>Jessica Randall</h2>
+          <span>London, United Kingdom</span>
+        </div>
+        <p>"Front-end developer and avid reader."</p>
+        <div class="card-button-group">
+          <button class="card-button">Github</button>
+          <button class="card-button">Frontend Mentor</button>
+          <button class="card-button">LinkedIn</button>
+          <button class="card-button">Twitter</button>
+          <button class="card-button">Instagram</button>
+        </div>
+      </div>
+    </section>
+  </main>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" title="opens in a new tab"
       target="_blank">Frontend Mentor</a>.
     Coded by <a title="opens in a new tab" target="_blank" href="https://www.frontendmentor.io/profile/TanDevv">Liam
       Tanfield</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
