Add CSS styling to elements

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <body>
   <main>
+    <h1 class="visually-hidden">Social Links Profile</h1>
     <section class="card_container">
       <div class="card-contents">
         <div class="card-img_container">
@@ -33,7 +34,7 @@
           <h2>Jessica Randall</h2>
           <span>London, United Kingdom</span>
         </div>
-        <p>"Front-end developer and avid reader."</p>
+        <p class="card-contents-paragraph">"Front-end developer and avid reader."</p>
         <div class="card-button-group">
           <button class="card-button">Github</button>
           <button class="card-button">Frontend Mentor</button>
